# futronico_plugin

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: futronic.dart  futronic_bindings_generated.dart  futronic_enroll_result.dart  futronic_functions_typedefs.dart  futronic_status.dart  futronic_utils.dart  futronico.dart  futronico_types.dart  structs.dart
lib/enum/: ftr_param.dart  ftr_signal_status.dart
src/: CMakeLists.txt  futronic.c
windows/: CMakeLists.txt
